--- a/services/Ceramic-Coating.html
+++ b/services/Ceramic-Coating.html
@@ -6,7 +6,7 @@
  <title>
     Best Auto Protection Shop in Waterford Township
 </title>
-    <link rel="canonical" href="index.html" />
+    <link rel="canonical" href="Ceramic-Coating.html" />
 
 <link rel="shortcut icon" href="logo.png" alt="M
 Premier Paint Protection, Coatings & Window Tint Shop in Roanoke, TX
