--- a/services/Color-Change-Car-Wraps.html
+++ b/services/Color-Change-Car-Wraps.html
@@ -6,7 +6,7 @@
  <title>
     Best Auto Protection Shop in Waterford Township
 </title>
-    <link rel="canonical" href="index.html" />
+    <link rel="canonical" href="Color-Change-Car-Wraps.html" />
 
 <link rel="shortcut icon" href="logo.png" alt="M
 Premier Paint Protection, Coatings & Window Tint Shop in Roanoke, TX
