--- a/about.html
+++ b/about.html
@@ -9,25 +9,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <title>About Us - Maintenance Detailing Services in Miami, FL
-Car Detailing in Miami, Fl
-Maintenance Detailing Services in Miami, FL
-Pet Hair Removal Miami, Fl
-Hot Water Extraction & Steam Cleaning in Miami, FL
-Exterior Auto Detailing in Miami, FL
-Engine Detailing Services in Miami, Fl
-Headlight Restoration Services in Miami, FL
-Exterior Trim Restoration Miami, FL
-Ceramic Sealant Services Miami, FL
-Water Spot Removal Services in Miami, FL
-Ceramic Coating Services Miami, FL
-Leather Ceramic Coating in Miami, FL
-Fabric Ceramic Coating Miami, FL
-Glass Ceramic Coating Miami, FL
-Wheel & Brake Calipers Ceramic Coating Miami, FL
+ <title>About Us - 
 </title>
  
-<link rel="shortcut icon" href="/logo.png" alt="" />
+<link rel="shortcut icon" href="/logo.png" alt="logo" />
 <meta charset="UTF-8">
 <meta name="title" content="About Us -Mobile Auto Detailing & Ceramic Coating in Miami,FL
 Maintenance Detailing Services in Miami, FL
