--- a/about.html
+++ b/about.html
@@ -221,9 +221,8 @@ Wheel & Brake Calipers Ceramic Coating Miami, FL
 
 </style><nav class="navbar navbar-expand-lg navbar-light bg-white px-md-5 pt-3 pb-3">
  
-      <a class="navbar-brand" href="index.html"  >
+      <a class="navbar-brand" href="https://autoprodfw-389dd72dd9f0.herokuapp.com/"  >
    
-    <img alt="" src="/index.html"    width="150px"   >
       </a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
