--- a/about.html
+++ b/about.html
@@ -383,7 +383,7 @@ Wheel & Brake Calipers Ceramic Coating Miami, FL
              
 
 <p><a class="  allShow" href="#" rel="nofollow" target="_blank">More Info</a></p>
-<p><a class="  allShow" href="#" rel="nofollow" target="_blank">More About {{CITY}},{{STATE}} </a></p>
+<p><a class="  allShow" href="#" rel="nofollow" target="_blank">More About Txhttps://autoprodfw.s3.eu-north-1.amazonaws.com/amzon/index.html </a></p>
 <p><a class="  allShow" href="#"  target="_blank">Additional Information</a></p>
 <p><a class="  allShow"  href="" rel="nofollow" target="_blank"></a></p>
   <p><a class="  allShow"  href=""  target="_blank"></a></p>
